@@ -290,17 +290,17 @@
 #define TOOLTIP_SHOW_ALL        _(TOOLTIP_SHOW_ALL_N)
 #define TOOLTIP_SINGLE_LINE_N  N_("Show transactions on single lines")
 #define TOOLTIP_SINGLE_LINE     _(TOOLTIP_SINGLE_LINE_N)
-#define TOOLTIP_SORT_BY_AMNT_N N_("Sort by Amount, then Date, then Num")
+#define TOOLTIP_SORT_BY_AMNT_N N_("Sort by Amount")
 #define TOOLTIP_SORT_BY_AMNT    _(TOOLTIP_SORT_BY_AMNT_N)
-#define TOOLTIP_SORT_BY_DATE_N N_("Sort by Date, then Num, then Amount")
+#define TOOLTIP_SORT_BY_DATE_N N_("Sort by Date")
 #define TOOLTIP_SORT_BY_DATE    _(TOOLTIP_SORT_BY_DATE_N)
-#define TOOLTIP_SORT_BY_DESC_N N_("Sort by Description, then Date, then Num")
+#define TOOLTIP_SORT_BY_DESC_N N_("Sort by Description")
 #define TOOLTIP_SORT_BY_DESC    _(TOOLTIP_SORT_BY_DESC_N)
 #define TOOLTIP_SORT_BY_ENTERED_N N_("Sort by the date of entry")
 #define TOOLTIP_SORT_BY_ENTERED    _(TOOLTIP_SORT_BY_ENTERED_N)
-#define TOOLTIP_SORT_BY_MEMO_N N_("Sort by Memo, then Date, then Num")
+#define TOOLTIP_SORT_BY_MEMO_N N_("Sort by Memo")
 #define TOOLTIP_SORT_BY_MEMO    _(TOOLTIP_SORT_BY_MEMO_N)
-#define TOOLTIP_SORT_BY_NUM_N  N_("Sort by Num, then Date, then Amount")
+#define TOOLTIP_SORT_BY_NUM_N  N_("Sort by Num")
 #define TOOLTIP_SORT_BY_NUM     _(TOOLTIP_SORT_BY_NUM_N)
 #define TOOLTIP_SORT_BY_STMT_N N_("Sort by the statement date "\
                                   "(unreconciled items last")
