@@ -1,5 +1,8 @@
 2000-05-20  Dave Peticolas  <peticola@cs.ucdavis.edu>
 
+	* src/gnome/window-register.c (gnc_register_sort): just sort by the
+	given key and then by the standard order.
+
 	* src/gnome/window-reconcile.c: add menus to change the sort order
 	of the debits and credits list.
 
